# NAND2TETRIS-JackCompiler

./: .gitignore  CMakeLists.txt  README.md  install.bat  install.sh  main.cpp
.github/workflows/: build.yml
Compiler/: NodeType.h  ParseNode.cpp  ParseNode.h  TokenTypes.h  Tokenizer.cpp  Tokenizer.h  main.cpp
Compiler/AST/: AST.h  ASTVisitor.h
Compiler/CodeGenerator/: CodeGenerator.cpp  CodeGenerator.h
Compiler/GlobalRegistry/: GlobalRegistry.cpp  GlobalRegistry.h
Compiler/Parser/: AST.h  ASTVisitor.h  Parser.cpp  Parser.h  PrattParser.cpp  PrattParser.h  XMLExporter.cpp  XMLExporter.h  XMLVisitor.h
Compiler/SemanticAnalyser/: GlobalRegistry.cpp  GlobalRegistry.h  SemanticAnalyser.cpp  SemanticAnalyser.h  SymbolTable.cpp
Compiler/SymbolTable/: SymbolTable.cpp  SymbolTable.h
Compiler/Syntax Analyser/: SymbolTable.cpp  SymbolTable.h
Compiler/Tokenizer/: TokenTypes.h  Tokenizer.cpp  Tokenizer.h
Compiler/TypeRegistry/: TypeRegistry.cpp  TypeRegistry.h
JackCode/: Main.jack
JackCode/JackProject/: Main.jack  School.jack  Student.vm
docs/: RELEASE_README.txt
scripts/: install.bat  install.sh
tests/JackCodeGenTest/: jack_codegen.cpp
tests/JackParserTest/: jack_parser.cpp
tests/JackSemanticAnalyser/: jack_semantic.cpp
tests/JackTestCode/: BasicTest.jack  Benchmark.jack  MegaBenchmark.jack
tests/JackTokensTest/: jack_tokens.cpp
tools/: global_registry_viz.py  jack_viz.py  requirements.txt  symbol_table_viz.py  unified_viz.py
